docs: update documentation to use scalus.compiler API
  Update all documentation examples to import compile and other compiler
  functions from scalus.compiler package instead of the deprecated
  scalus.Compiler object.

--- a/scalus-site/content/ledger/yaci-devkit.mdx
+++ b/scalus-site/content/ledger/yaci-devkit.mdx
@@ -162,7 +162,7 @@ The `BloxbeanAccount` provides key pairs for different purposes:
 Here's a complete example demonstrating minting tokens with a Plutus script:
 
 ```scala
-import scalus.Compiler.compile
+import scalus.compiler.compile
 import scalus.builtin.Data
 import scalus.cardano.ledger.{Script, AssetName, Coin}
 import scalus.{toUplc, plutusV2}
