--- a/scalus-site/content/smart-contract/compiling.mdx
+++ b/scalus-site/content/smart-contract/compiling.mdx
@@ -11,7 +11,7 @@ description: Compile Scala validators to Plutus Core bytecode. Learn about Plutu
 Use the `compile` function to transform your Scala validator into a Plutus script:
 
 ```scala
-import scalus.Compiler.compile
+import scalus.compiler.compile
 
 // Compile your validator
 val compiled = compile {
