--- a/scalus-site/content/smart-contract/developing-smart-contracts.mdx
+++ b/scalus-site/content/smart-contract/developing-smart-contracts.mdx
@@ -190,7 +190,7 @@ Learn more about [Debugging Smart Contracts](/docs/smart-contract/debugging).
 Use the `compile` function to transform your Scala validator into a Plutus script:
 
 ```scala
-import scalus.Compiler.compile
+import scalus.compiler.compile
 
 // Compile your validator
 val compiled = compile {
