--- a/scalus-site/content/smart-contract/in-depth-validator-look.mdx
+++ b/scalus-site/content/smart-contract/in-depth-validator-look.mdx
@@ -27,7 +27,7 @@ Let's take a look at an example contract, `HTLCValidator`, to illustrate the con
 
 ```scala
 import scalus.*
-import scalus.Compiler.compile
+import scalus.compiler.compile
 import scalus.builtin.Builtins.sha3_256
 import scalus.builtin.Data.{FromData, ToData}
 import scalus.builtin.{ByteString, Data, FromData, ToData}
