feat: add txBuilder function with context CardanoInfo parameter
Add top-level `txBuilder` function that uses Scala 3 context parameters:

```scala
import scalus.cardano.txbuilder.txBuilder

given CardanoInfo = CardanoInfo.mainnet
val builder = txBuilder  // Uses the given CardanoInfo
```

- Add `def txBuilder(using CardanoInfo): TxBuilder` to txbuilder package
- Update TxBuilderTest to use txBuilder throughout
- Update documentation with context parameter examples

--- a/scalus-site/content/transaction-builder/building-first-transaction.mdx
+++ b/scalus-site/content/transaction-builder/building-first-transaction.mdx
@@ -181,16 +181,16 @@ import scalus.utils.await
 import scala.concurrent.ExecutionContext.Implicits.global
 import scala.concurrent.duration.*
 
-// Setup
-val cardanoInfo = CardanoInfo.mainnet
+// Setup - use given CardanoInfo for cleaner txBuilder calls
+given CardanoInfo = CardanoInfo.mainnet
 val myUtxo: Utxo = // ...
 val recipientAddress: Address = // ...
 val changeAddress: Address = // ...
 val signer: TransactionSigner = // ...
 val provider: Provider = // ...
 
-// Build, sign, and submit
-val transaction = TxBuilder(cardanoInfo)
+// Build, sign, and submit using txBuilder with context parameter
+val transaction = txBuilder
   .spend(myUtxo)
   .payTo(recipientAddress, Value.ada(10))
   .build(changeTo = changeAddress)
